extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_volume_value_changed(value):
	AudioServer.set_bus_volume_db(0,value)


func _on_back_pressed():
	get_tree().change_scene_to_file("res://mainmenu.tscn")


func _on_resoulution_item_selected(index):
	match index:
		0:
			DisplayServer.window_set_size(Vector2i(1920, 1080))
		1:
			DisplayServer.window_set_size(Vector2i(1680, 1050))
		2:
			DisplayServer.window_set_size(Vector2i(1280, 900))
